--- a/spider_projects/使用代理在普通爬虫脚本下.md
+++ b/spider_projects/使用代理在普通爬虫脚本下.md
@@ -1,22 +1,36 @@
+#当因访问多次而封掉IP的时候需要代理爬取。
+
 ```python
-import pymysql
 
-class MysqlHelper(object):
+import requests
+
+class MyProxy(object):
+    # 1. 存储一个proxy， 需要的是重复使用， 这个变量就放到这个类中，
+    # 每次获取proxy的时候，只需要获取已经存在的proxy就可以了，不需要每次都重新获取proxy
+    # 如果出错的情况，我们需要重新获取一遍proxy，后面使用
     def __init__(self):
-        self.conn = pymysql.connect(host='127.0.0.1', port=3306, user='root', password='123456', db='projects', charset='utf8mb4')
-        self.cursor = self.conn.cursor()
+        self.form_proxy = {}
+        self.need_change_proxy = True
 
-    def execute_modify_sql(self, insert_sql, data):
-        self.cursor.execute(insert_sql, data)
-        self.conn.commit()
+    def change_proxy(self):
+        self.need_change_proxy = True
+    # 需要有一个函数， 获取当前可用的代理
+    def get_one_proxy(self):
+        # 如果need_change_proxy == True, 就说明需要新的proxy做替换
+        if self.need_change_proxy:
+            self.form_proxy = self.new_proxy()#需要处理
+            self.need_change_proxy = False
 
-    def __del__(self):
-        self.cursor.close()
-        self.conn.close()
+        return self.form_proxy
 
-if __name__ == '__main__':
-    insert_sql = 'insert into renxing (c1, c2) values(%s, %s)'
-    data = (1, "不准任性'")
-    helper = MysqlHelper()
-    helper.execute_modify_sql(insert_sql, data)
+    def new_proxy(self):
+        url = '快代理生成的接口'
+        response = requests.get(url)
+        myformproxy = {
+            'http': 'http://'+ response.text,
+            'https': 'http://' + response.text,
+        }
+
+        return myformproxy
+
 ```
